--- a/style.css
+++ b/style.css
@@ -82,11 +82,16 @@ body * {
     top: 50%;
     left: 0;
     transform: translateY(-50%);
+
+    animation: slide-back 0.2s;
 }
 
 .light #switch button {
-    right: 0;
-    left: initial;
+    animation: slide-in 0.4s forwards;
+}
+
+#switch button:hover {
+    outline: 8px solid var(--hightlight-color)
 }
 
 #switch span {
@@ -156,4 +161,34 @@ ul li a:hover {
 footer {
 padding: 24px 0;
 text-align: center;
+}
+
+/* media queries */
+@media (min-width: 700px) {
+    :root {
+        --bg-url: url(./assets/background-desktop-night.jpg)
+    }
+
+    .light {
+        --bg-url: url(./assets/background-desktop.png)
+    }
+}
+
+/* animation */
+@keyframes slide-in {
+    from {
+        left: 0;
+    }
+    to {
+        left: 50%;
+    }
+}
+
+@keyframes slide-back {
+    from {
+        left: 50%;
+    }
+    to {
+        left: 0;
+    }
 }
