ajust viewport hight

--- a/style.css
+++ b/style.css
@@ -25,10 +25,11 @@
 }
 
 body {
+    height: 100vh;
     background: var(--bg-url);
     background-repeat: no-repeat;
     background-position: top center;
-    background-size: cover
+    background-size: cover;
 }
 
 body * {
